syntax = "proto3";
import "mailbox.proto";
package LPS.Core.Rpc.InnerMessages;
 
message EntityMailBox {
  MailBox Mailbox = 1;
}
